进步编程首页

--- a/index.html
+++ b/index.html
@@ -2,27 +2,15 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no"/>
-        <style>
-            .menu {
-                width: 80%;
-                height: 48px;
-                margin: 10px auto;
-                display: flex;
-            }
-            .item {
-                width: 48px;
-                height: 48px;
-                margin-right: 5px;
-                background-color: #fafafa;
-            }
-        </style>
+        <link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
-        <div class="menu">
-            <div class="item">首页</div>
+        <div id='test' class="menu">
+            <div class="item active">首页</div>
             <div class="item">前端</div>
             <div class="item">后端</div>
             <div class="item">经济</div>
         </div>
+        <script src="./js/index.js"></script>
     </body>
 </html>
