--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
         <link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
+        <!--导航栏-->
         <div id='test' class="menu">
             <div class="item active">首页</div>
             <div class="item">前端</div>
             <div class="item">后端</div>
             <div class="item">经济</div>
         </div>
-        <script src="./js/index.js"></script>
+        <!--主页内容-->
+
+        <div class="card">
+            <div class="card header">
+                <h3>数组常用的函数总结</h3>
+            </div>
+            <div class="card body">
+                <a href="./b/js/2017050301.md">数组常用的函数总结</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card header">
+                <h3>字符常用的函数总结</h3>
+            </div>
+            <div class="card body">
+                <a href="./b/js/20170503.md">字符常用的函数总结</a>
+            </div>
+        </div>
     </body>
+    <script src="./js/index.js"></script>
 </html>
