--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>数组常用的函数总结</h3>
             </div>
             <div class="card body">
-                <a href="./b/js/2017050301.md">数组常用的函数总结</a>
+                <a href="./b/js/2017050301">数组常用的函数总结</a>
             </div>
         </div>
         <div class="card">
@@ -27,7 +27,7 @@
                 <h3>字符常用的函数总结</h3>
             </div>
             <div class="card body">
-                <a href="./b/js/20170503.md">字符常用的函数总结</a>
+                <a href="./b/js/20170503">字符常用的函数总结</a>
             </div>
         </div>
     </body>
