--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                 <a href="./b/js/20170503">字符常用的函数总结</a>
             </div>
         </div>
+        <div class="card">
+            <div class="card header">
+                <h3>有关js读取word文档的初步尝试</h3>
+            </div>
+            <div class="card body">
+                <a href="./b/shixi/20170503">有关js读取word文档的初步尝试</a>
+            </div>
+        </div>
     </body>
     <script src="./js/index.js"></script>
 </html>
