--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h3>正则表达式的学习--基础篇</h3>
             </div>
             <div class="card body">
-                <a href="./b/shixi/20170504">正则表达式的学习--基础篇</a>
+                <a href="./b/js/20170504">正则表达式的学习--基础篇</a>
             </div>
         </div>
     </div>
