修改主页样式

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <!--logo栏-->
+    <div class="black">
+        <div class="logo-header">
+            <span class="logo text">blog</span>
+            <div>
+                <div class="img avator"><img src="./image/avator.jpg" alt="无法显示图片"></div>
+            </div>
+        </div>
+    </div>
     <!--导航栏-->
     <div id='test' class="menu">
         <div class="item active">首页</div>
