--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!--logo栏-->
-    <div class="black">
+    <div fixed class="black">
         <div class="logo-header">
             <span class="logo text">blog</span>
             <div>
@@ -27,7 +27,7 @@
     </div>
     <!--主页内容-->
     <div  flex='wrap' row='between' class="container">
-        <div class="card">
+        <div class="card shaow">
             <div class="card header">
                 <h3>数组常用的函数总结</h3>
             </div>
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card shaow">
             <div class="card header">
                 <h3>字符常用的函数总结</h3>
             </div>
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card shaow">
             <div class="card header">
                 <h3>有关js读取word文档的初步尝试</h3>
             </div>
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card shaow">
             <div class="card header">
                 <h3>正则表达式的学习--基础篇</h3>
             </div>
