--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
         <div class="item active">首页</div>
         <div class="item">前端</div>
         <div class="item">后端</div>
-        <div class="item">经济</div>
+        <div class="item">其他</div>
     </div>
     <!--主页内容-->
     <div  flex='wrap' row='between' class="container">
+        <div class="text-header">
+            <h3 line>全部</h3>
+        </div>
         <div class="card shaow">
             <div class="card header">
                 <h3>数组常用的函数总结</h3>
@@ -62,8 +65,18 @@
                 <a href="./b/js/20170504">正则表达式的学习--基础篇</a>
             </div>
         </div>
+
+         <div class="card shaow">
+            <div class="card header">
+                <h3>关于原生js事件的绑定（一）</h3>
+            </div>
+            <div class="card body">
+                <a href="./b/js/20170517">关于原生js事件的绑定（一）</a>
+            </div>
+        </div>
     </div>
 </body>
+<script src="./js/jquery.js"></script>
 <script src="./js/index.js"></script>
 
 </html>
