'提交mongodb的安装'

--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
                 <h3>关于原生js事件的绑定（一）</h3>
             </div>
             <div class="card body">
-                <a href="./b/js/20170517">关于原生js事件的绑定（一）</a>
+                <a href="./b/js/201705046">关于原生js事件的绑定（一）</a>
+            </div>
+        </div>
+
+         <div class="card shaow">
+            <div class="card header">
+                <h3>有关Mongodb的安装</h3>
+            </div>
+            <div class="card body">
+                <a href="./b/js/201705046">有关Mongodb的安装</a>
             </div>
         </div>
     </div>
